Fix form wrap bug

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -69,6 +69,8 @@
       top: 140px;
       width: 100%;
       height: 100%;
+      max-height: 473px;
+
       .chat-content {
         
         background: purple;
@@ -76,6 +78,7 @@
         padding-bottom: 30px;
         overflow: auto;
         height: 100%;
+        min-height: 200px;
         max-height: 473px;
         
         .received-message-box {
@@ -137,6 +140,7 @@
       width: 100%;
       position: absolute;
       bottom: 0px;
+
       
       .chat-box-controller-inside {
         position: relative;
@@ -148,9 +152,13 @@
         .chat-box-input {
           background: white;
           width: 439px;
-          height: 100%;
+          height: 56px;
+          border: none;
           position: absolute;
           left: 0px;
+          font-size: $my-text;
+          padding-left: 15px;
+          padding-right: 15px;
           
         }
         
